# shoom

./: .gitignore  CMakeLists.txt
include/shoom/: shoom.h
src/: shoom_unix_darwin.cc  shoom_win32.cc
test/: CMakeLists.txt  shoom_test.cc
